--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -8450,7 +8450,7 @@ suitable for agility tests)</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
   <property name="decorated">True</property>
-  <property name="skip_taskbar_hint">True</property>
+  <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
@@ -15731,34 +15731,6 @@ Test&lt;/b&gt;</property>
 			  <property name="visible">True</property>
 			  <property name="homogeneous">False</property>
 			  <property name="spacing">0</property>
-
-			  <child>
-			    <widget class="GtkButton" id="button_zoom">
-			      <property name="visible">True</property>
-			      <property name="tooltip" translatable="yes">Update</property>
-			      <property name="can_focus">True</property>
-			      <property name="relief">GTK_RELIEF_NORMAL</property>
-			      <property name="focus_on_click">True</property>
-			      <signal name="clicked" handler="on_button_zoom_clicked" last_modification_time="Tue, 31 Mar 2009 10:48:33 GMT"/>
-
-			      <child>
-				<widget class="GtkImage" id="image4224">
-				  <property name="visible">True</property>
-				  <property name="stock">gtk-zoom-in</property>
-				  <property name="icon_size">4</property>
-				  <property name="xalign">0.5</property>
-				  <property name="yalign">0.5</property>
-				  <property name="xpad">0</property>
-				  <property name="ypad">0</property>
-				</widget>
-			      </child>
-			    </widget>
-			    <packing>
-			      <property name="padding">0</property>
-			      <property name="expand">False</property>
-			      <property name="fill">False</property>
-			    </packing>
-			  </child>
 
 			  <child>
 			    <widget class="GtkButton" id="button_properties">
