--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -13522,6 +13522,7 @@ suitable for agility tests)</property>
 					      <property name="relief">GTK_RELIEF_NORMAL</property>
 					      <property name="focus_on_click">True</property>
 					      <signal name="clicked" handler="on_multi_chronopic_start_clicked" last_modification_time="Mon, 27 Apr 2009 16:34:57 GMT"/>
+					      <signal name="enter" handler="on_button_enter" last_modification_time="Thu, 30 Apr 2009 15:25:20 GMT"/>
 					    </widget>
 					    <packing>
 					      <property name="left_attach">0</property>
