--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -2977,16 +2977,13 @@ comments</property>
 		  </child>
 
 		  <child>
-		    <widget class="GtkSpinButton" id="spinbutton_decimals">
+		    <widget class="GtkComboBox" id="combo_decimals">
 		      <property name="visible">True</property>
-		      <property name="can_focus">True</property>
-		      <property name="climb_rate">1</property>
-		      <property name="digits">0</property>
-		      <property name="numeric">False</property>
-		      <property name="update_policy">GTK_UPDATE_ALWAYS</property>
-		      <property name="snap_to_ticks">False</property>
-		      <property name="wrap">False</property>
-		      <property name="adjustment">1 1 3 1 10 10</property>
+		      <property name="items">1
+2
+3</property>
+		      <property name="add_tearoffs">False</property>
+		      <property name="focus_on_click">True</property>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
@@ -7001,19 +6998,20 @@ suitable for agility tests)</property>
 			      </child>
 
 			      <child>
-				<widget class="GtkSpinButton" id="spin_distance_different_tracks_number">
+				<widget class="GtkComboBox" id="combo_distance_different_tracks">
 				  <property name="visible">True</property>
-				  <property name="sensitive">False</property>
-				  <property name="can_focus">True</property>
-				  <property name="climb_rate">1</property>
-				  <property name="digits">0</property>
-				  <property name="numeric">True</property>
-				  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
-				  <property name="snap_to_ticks">True</property>
-				  <property name="wrap">False</property>
-				  <property name="adjustment">2 2 10 1 10 10</property>
-				  <signal name="changed" handler="on_spin_distance_different_tracks_number_changed" last_modification_time="Wed, 28 Jan 2009 12:34:53 GMT"/>
-				  <signal name="changed" handler="on_entries_required_changed" last_modification_time="Wed, 28 Jan 2009 14:47:31 GMT"/>
+				  <property name="items">2
+3
+4
+5
+6
+7
+8
+9
+10</property>
+				  <property name="add_tearoffs">False</property>
+				  <property name="focus_on_click">True</property>
+				  <signal name="changed" handler="on_combo_distance_different_tracks_changed" last_modification_time="Wed, 13 May 2009 11:39:22 GMT"/>
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
@@ -10564,25 +10562,6 @@ suitable for agility tests)</property>
 					      <property name="tooltip" translatable="yes">Abalakov Jump</property>
 					      <property name="can_focus">True</property>
 					      <property name="label">ABK</property>
-					      <property name="use_underline">True</property>
-					      <property name="relief">GTK_RELIEF_NORMAL</property>
-					      <property name="focus_on_click">True</property>
-					      <signal name="clicked" handler="on_normal_jump_activate" last_modification_time="Sat, 02 Oct 2004 20:26:49 GMT"/>
-					      <signal name="enter" handler="on_button_enter" last_modification_time="Tue, 01 May 2007 20:00:28 GMT"/>
-					    </widget>
-					    <packing>
-					      <property name="padding">0</property>
-					      <property name="expand">False</property>
-					      <property name="fill">False</property>
-					    </packing>
-					  </child>
-
-					  <child>
-					    <widget class="GtkButton" id="button_jumps_max">
-					      <property name="visible">True</property>
-					      <property name="tooltip" translatable="yes">Maximum Jump (like Abalakov but with free technique)</property>
-					      <property name="can_focus">True</property>
-					      <property name="label">Max</property>
 					      <property name="use_underline">True</property>
 					      <property name="relief">GTK_RELIEF_NORMAL</property>
 					      <property name="focus_on_click">True</property>
