--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -2612,7 +2612,6 @@ comments</property>
 	      <child>
 		<widget class="GtkVBox" id="vbox145">
 		  <property name="border_width">8</property>
-		  <property name="visible">True</property>
 		  <property name="homogeneous">False</property>
 		  <property name="spacing">10</property>
 
@@ -2624,7 +2623,6 @@ comments</property>
 
 		      <child>
 			<widget class="GtkLabel" id="label531">
-			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">&lt;b&gt;Logs directory&lt;/b&gt;</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
@@ -2649,7 +2647,6 @@ comments</property>
 
 		      <child>
 			<widget class="GtkLabel" id="label_logs">
-			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="label" translatable="yes"></property>
 			  <property name="use_underline">False</property>
@@ -2728,6 +2725,25 @@ comments</property>
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="label" translatable="yes">Show height</property>
+		  <property name="use_underline">True</property>
+		  <property name="relief">GTK_RELIEF_NORMAL</property>
+		  <property name="focus_on_click">True</property>
+		  <property name="active">False</property>
+		  <property name="inconsistent">False</property>
+		  <property name="draw_indicator">True</property>
+		</widget>
+		<packing>
+		  <property name="padding">0</property>
+		  <property name="expand">False</property>
+		  <property name="fill">False</property>
+		</packing>
+	      </child>
+
+	      <child>
+		<widget class="GtkCheckButton" id="checkbutton_power">
+		  <property name="visible">True</property>
+		  <property name="can_focus">True</property>
+		  <property name="label" translatable="yes">Show power on Drop Jump</property>
 		  <property name="use_underline">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="focus_on_click">True</property>
@@ -15185,7 +15201,7 @@ suitable for agility tests)</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER_ALWAYS</property>
   <property name="modal">True</property>
-  <property name="resizable">False</property>
+  <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
@@ -15309,7 +15325,7 @@ suitable for agility tests)</property>
 	    <packing>
 	      <property name="padding">0</property>
 	      <property name="expand">True</property>
-	      <property name="fill">False</property>
+	      <property name="fill">True</property>
 	    </packing>
 	  </child>
 	</widget>
