--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -10188,11 +10188,13 @@ suitable for agility tests)</property>
 				  <child>
 				    <widget class="GtkButton" id="button_edit_current_person">
 				      <property name="visible">True</property>
-				      <property name="tooltip" translatable="yes">Edit selected person</property>
+				      <property name="tooltip" translatable="yes">Edit selected person (E)</property>
 				      <property name="can_focus">True</property>
 				      <property name="relief">GTK_RELIEF_NORMAL</property>
 				      <property name="focus_on_click">True</property>
 				      <signal name="clicked" handler="on_edit_current_person_clicked" last_modification_time="Sun, 07 Nov 2004 18:48:06 GMT"/>
+				      <accelerator key="e" modifiers="GDK_SHIFT_MASK" signal="clicked"/>
+				      <accelerator key="E" modifiers="0" signal="clicked"/>
 
 				      <child>
 					<widget class="GtkImage" id="image1977">
@@ -10265,7 +10267,7 @@ suitable for agility tests)</property>
 				      <property name="headers_visible">True</property>
 				      <property name="rules_hint">False</property>
 				      <property name="reorderable">False</property>
-				      <property name="enable_search">True</property>
+				      <property name="enable_search">False</property>
 				      <property name="fixed_height_mode">False</property>
 				      <property name="hover_selection">False</property>
 				      <property name="hover_expand">False</property>
